# MAIDOS-Series

./: .gitignore  AGENTS.md  CLAUDE.md  Code-QC-v3.5-Guidelines.md  README.md
MAIDOS-CodeQC/: .gitignore  (+7 more)
MAIDOS-Driver/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SPEC-MAIDOS-Driver-v2.0.md  maidos_pipeline.sh
MAIDOS-Driver/data/: drivers.tsv
MAIDOS-Driver/docs/: AC_MATRIX.md  ADR.md  ALERTS.md  ARCHITECTURE.md  BACKUP_DR.md  CONTRACT.md  DEPLOY.md  NFR.md  PRD.md  RUNBOOK.md  SLO.md  SPEC.md  STATE_MODEL.md  USER_JOURNEYS.md
MAIDOS-Driver/installer/: License.rtf  Product.wxs  verify_msi.ps1
MAIDOS-Driver/proof/: manifest.json
MAIDOS-Driver/proof/e2e/: nonce.txt
MAIDOS-Driver/proof/failpaths/: disk_full.json  invalid_inf.json  no_admin.json
MAIDOS-Driver/proof/observability/: trace.json
MAIDOS-Driver/proof/sync/: csharp_imports.txt  ffi_sync.json  rust_exports.txt  sync_assert.json
MAIDOS-Driver/qc/: build.bat  e2e.bat  gen_manifest.py  integration.bat  proof.bat  run_evidence.ps1  unit.bat
MAIDOS-Driver/src/: ffi.rs  lib.rs  main.rs
MAIDOS-Driver/src/MAIDOS.Driver.App/: App.xaml  App.xaml.cs  MAIDOS.Driver.App.csproj  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
MAIDOS-Driver/src/MAIDOS.Driver.Native/: backup.cpp  diag.cpp  installer.cpp  logger.h  pit_test.cpp  scanner.cpp  updater.cpp
MAIDOS-Driver/src/MAIDOS.Driver.Service/: HardwareDetectionService.cs
MAIDOS-Driver/src/ai/: driver_recommender.rs  hardware_identifier.rs  mod.rs
MAIDOS-Driver/src/core/: audit.rs  mod.rs
MAIDOS-Driver/src/database/: driver_database.rs  mod.rs
MAIDOS-Driver/src/platform/: mod.rs
MAIDOS-Driver/tests/: TestDownload.cs  hardware_detection_test.rs  test_download.cpp  verify_online_update.ps1
MAIDOS-Driver/tests/NativeTests/: NativeApiTest.cpp
MAIDOS-Forge/maidos-forge-cli/: Cargo.toml
MAIDOS-Forge/maidos-forge-cli/src/: main.rs
MAIDOS-Forge/maidos-forge-core/: Cargo.toml
MAIDOS-Forge/maidos-forge-core/src/: checker.rs  compiler.rs  config.rs  dependency.rs  error.rs  ffi.rs  fs.rs  lib.rs  parser.rs  plugin.rs  scheduler.rs
MAIDOS-IME/: .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE  README.md  SPEC-MAIDOS-IME-v2.0.md
MAIDOS-IME/MAIDOS.IME.Core/: MAIDOS.IME.Core.vcxproj  ime_engine.h  ime_module.cpp  ime_module.h  pch.cpp  pch.h
MAIDOS-IME/docs/: AC_MATRIX.md  ADR.md  ALERTS.md  ARCHITECTURE.md  BACKUP_DR.md  CONTRACT.md  DEPLOY.md  NFR.md  PRD.md  RUNBOOK.md  SLO.md  SPEC.md  STATE_MODEL.md  USER_JOURNEYS.md
MAIDOS-IME/installer/: build_msi.ps1
MAIDOS-IME/installer/wix/: MAIDOS-IME.wxs
MAIDOS-IME/platform/android/: package.sh
MAIDOS-IME/platform/ios/: package.sh
MAIDOS-IME/platform/linux/: package.sh
MAIDOS-IME/platform/macos/: package.sh
MAIDOS-IME/platform/windows/: README.md
MAIDOS-IME/proof/: manifest.json
MAIDOS-IME/proof/e2e/: nonce.txt
MAIDOS-IME/proof/failpaths/: invalid_input.json  missing_dictionary.json  ollama_offline.json
MAIDOS-IME/proof/observability/: trace.json
MAIDOS-IME/proof/sync/: ffi_sync.json  rust_exports.txt  sync_assert.json
MAIDOS-IME/qc/: build.bat  e2e.bat  gen_manifest.py  integration.bat  proof.bat  run_evidence.ps1  unit.bat
MAIDOS-IME/src/MAIDOS.IME.AI/: AiManager.cs  HandwritingInput.cs  ImeNative.cs  MAIDOS.IME.AI.csproj  Program.cs  SmartPredict.cs  VoiceInput.cs
MAIDOS-IME/src/MAIDOS.IME.Core/: MAIDOS.IME.Core.vcxproj  bopomofo_scheme.cpp  bopomofo_scheme.h  candidate.cpp  converter.cpp  converter.h  dictionary.cpp  dictionary.h  dllmain.cpp  ime_engine.cpp  ime_engine.h  pch.h  pinyin.cpp  pinyin_parser.cpp  pinyin_parser.h  schemes.cpp  schemes.h  test_ime.cpp  tsf.cpp
MAIDOS-IME/src/config/: maidos.toml
MAIDOS-IME/src/core/: CMakeLists.txt  Cargo.toml  integration_test.cpp  test_ime.cpp
MAIDOS-IME/src/dicts/: basic.dict.json  bopomofo.dict.json  pinyin.dict.json  traditional_chinese_extended.dict.json  traditional_chinese_full.dict.json
MAIDOS-IME/tests/cpp/: test_bopomofo.cpp  test_ime_engine.cpp
MAIDOS-IME/tests/csharp/: MAIDOS.IME.AI.Tests.cs  MAIDOS.IME.AI.Tests.csproj
MAIDOS-IME/tests/integration/: integration_test.cpp
maidos-shared/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  QUICKSTART.md  README.md  RELEASE-v0.2.0.md
maidos-shared/.github/: dependabot.yml  pull_request_template.md
maidos-shared/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
maidos-shared/.github/workflows/: bench.yml  ci.yml  release.yml
maidos-shared/benches/: auth_bench.rs  bus_bench.rs  config_bench.rs  ffi_bench.rs  llm_bench.rs
maidos-shared/docs/: AC_MATRIX.md  ADR.md  ALERTS.md  ARCHITECTURE.md  BACKUP_DR.md  BUILD.md  CHANGELOG.md  CI.md  CONFIG.md  CONTRACT.md  DEPLOY.md  DEPS.md  DESIGN.md  GLOSSARY.md  NFR.md  PERF.md  PRD.md  RUNBOOK.md  SECURITY.md  SLO.md  SPEC.md  STATE_MODEL.md  TEST.md  USAGE.md  USER_JOURNEYS.md
maidos-shared/examples/: auth_tokens.rs  basic_config.rs  bus_pubsub.rs  full_integration.rs  llm_chat.rs
maidos-shared/include/: maidos.h
maidos-shared/maidos-auth/: Cargo.toml  README.md
maidos-shared/maidos-auth/src/: capability.rs  error.rs  ffi.rs  lib.rs  policy.rs  store.rs  token.rs
maidos-shared/maidos-auth/tests/: coverage_auth.rs
maidos-shared/maidos-bus/: Cargo.toml  README.md
maidos-shared/maidos-bus/src/: error.rs  event.rs  ffi.rs  lib.rs  publisher.rs  subscriber.rs
maidos-shared/maidos-chain/: Cargo.toml
maidos-shared/maidos-chain/src/: bnb.rs  error.rs  eth.rs  lib.rs  mnc.rs  payment.rs  sol.rs  transaction.rs  wallet.rs
maidos-shared/maidos-config/: Cargo.toml  README.md
maidos-shared/maidos-google/: Cargo.toml
maidos-shared/maidos-llm/: Cargo.toml  README.md
maidos-shared/maidos-log/: Cargo.toml
maidos-shared/maidos-p2p/: Cargo.toml  README.md
maidos-shared/maidos-social/: Cargo.toml
maidos-shared/proof/: manifest.json
maidos-shared/qc/: build.bat  e2e.bat  gen_manifest.py  integration.bat  proof.bat  run_evidence.ps1  unit.bat
maidos-shared/scripts/: release.sh
maidos-shared/tests/: audit_and_fake_check.rs  integration.rs
(+774 files in other folders)
