[package]
name = "maidOS-driver"
version = "0.2.0"
edition = "2021"
authors = ["ZGWC_acegod818 <wocao@maidos.dev>"]
license = "MIT"
description = "Windows driver management engine — hardware detection, driver matching, backup/restore"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "maidOS-driver-cli"
path = "src/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.9"

windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_WinTrust",
    "Win32_Security_Cryptography",
    "Win32_Security_Cryptography_Catalog",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Wmi",
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_System_Performance",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Globalization",
] }

winreg = "0.50"
anyhow = "1.0"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.0"
