[package]
name = "maidos-forge-cli"
version = "0.1.0"
edition = "2021"
authors = ["ZGWC_acegod818 <wocao@maidos.dev>"]

[dependencies]
maidos-forge-core = { path = "../maidos-forge-core" }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"

[[bin]]
name = "forge"
path = "src/main.rs"