[package]
name = "maidos-bus"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MAIDOS cross-process event bus"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
maidos-config = { workspace = true, default-features = false }
maidos-auth = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = "3"
