[package]
name = "maidos-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MAIDOS unified configuration system with hot-reload support"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["watcher"]
watcher = ["dep:notify"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
notify = { workspace = true, optional = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
