[package]
name = "maidos-log"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "chrono"] }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true }

[lib]
crate-type = ["rlib"]