[package]
name = "maidos-p2p"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
# Minimal dependencies - handcrafted implementation
tokio = { workspace = true, features = ["rt-multi-thread", "net"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = "0.8"

# Internal dependencies
maidos-auth = { workspace = true }

[lib]
crate-type = ["rlib"]

[[example]]
name = "simple_p2p"
path = "examples/simple_p2p.rs"
