[package]
name = "maidos-config"
version = "0.1.0"
edition = "2021"
authors = ["ZGWC_acegod818 <wocao@maidos.dev>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
thiserror = "1.0"
dirs = "4.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.3"
