[package]
name = "maidos-core"
version = "0.1.0"
edition = "2021"
authors = ["ZGWC_acegod818 <wocao@maidos.dev>"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "maidos-core-demo"
path = "src/main.rs"

[dependencies]
maidos-llm = { path = "../maidos-llm" }
maidos-config = { path = "../maidos-config" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
