[package]
name = "maidos-llm"
version = "0.1.0"
edition = "2021"
authors = ["ZGWC_acegod818 <wocao@maidos.dev>"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
maidos-config = { path = "../maidos-config" }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockito = "0.31"